Add p5js library locally

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
     <section id="canvasContainer"></section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+    <script src="javascripts/p5.js"></script>
     <script src="javascripts/p5.sound.js"></script>
     <script src="javascripts/p5.dom.js"></script>
     <script src="javascripts/sketch.js"></script>
