Always rotate the background and icons

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             </button>
         </section>
 
-        <section id="soundBoardContainer">
+        <section id="soundBoardContainer" class="active">
             <div id="soundBoardBg">
                 <img src="images/centerpiece-art.png" />
             </div>
